@@ -1,5 +1,14 @@
-
 Changes with Apache 2.0.40
+
+  *) Fix Win32 cgi 500 errors when QUERY_ARGS or other strings include
+     extended characters (non US-ASCII) in non-utf8 format.  This brings
+     Win32 back into CGI/1.1 compliance, and leaves charset decoding up
+     to the cgi application itself.  [William Rowe]
+
+  *) Major overhaul of mod_dav, mod_dav_fs and the experimental/cache
+     modules to bring them up to the current apr/apr-util APIs.
+     [William Rowe]
+
   *) Fix segfault in mod_mem_cache most frequently observed when
      serving the same file to multiple clients on an MP machine.
      [Bill Stoddard]
